# labelr

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release-please.yml
cli/: annotate.py  export.py
cli/apps/: datasets.py  projects.py
docs/tutorials/: object-detection.md
scripts/: evaluate.py
src/labelr/: annotate.py  check.py  config.py  export.py  google_genai.py  main.py  sample.py  utils.py
src/labelr/apps/: datasets.py  directus.py  evaluate.py  google_batch.py  hugging_face.py  label_studio.py  projects.py  train.py  typer_description.py
src/labelr/apps/label_studio/: __init__.py  common.py  image_classification.py  object_detection.py  prediction.py  tag.py
src/labelr/export/: classification.py  common.py  llm.py  object_detection.py
src/labelr/sample/: classification.py  llm.py  object_detection.py
