[project]
name = "labelr"
version = "0.12.1"
description = "A command-line tool to manage labeling tasks with Label Studio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "imagehash>=4.3.1",
    "label-studio-sdk>=2.0.17",
    "more-itertools>=10.5.0",
    "openfoodfacts>=2.9.0",
    "typer>=0.15.1",
    "google-cloud-batch==0.18.0",
    "huggingface-hub",
    "deepdiff>=8.6.1",
    "rapidfuzz>=3.14.3",
    "aiohttp",
    "aiofiles",
    "orjson",
    "google-cloud-storage",
    "gcloud-aio-storage",
    "google-genai >= 1.56.0",
    "diskcache>=5.6.3",
]

[project.scripts]
labelr = "labelr.main:app"

[project.optional-dependencies]
ultralytics = [
    "ultralytics==8.4.8",
]
fiftyone = [
    "fiftyone~=1.10.0"
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "types-aiofiles>=25.1.0.20251011",
    "types-jsonschema>=4.25.1.20251009",
    "types-tqdm>=4.67.0.20250809",
]
